--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,7 +12,7 @@
 	height: 90px;
 	width: auto;
 	margin-left: 20px;
-	top: 0px;
+	top: 70px;
 }
 
 hr {
@@ -49,7 +49,7 @@ hr {
 .night {
 	width: 100%;
 	padding-top: 100px;
-	height: 500px;
+	min-height: 500px;
 	background: rgba(0,13,255,1);
 	background: -moz-linear-gradient(45deg, rgba(0,13,255,1) 0%, rgba(186,0,140,1) 100%);
 	background: -webkit-gradient(left bottom, right top, color-stop(0%, rgba(0,13,255,1)), color-stop(100%, rgba(186,0,140,1)));
@@ -110,4 +110,13 @@ hr {
 .row.examples  div {
 	display: inline-block;
     float: none;
+}
+
+@media screen and (max-width: 1300px) {
+    #little_callie {
+        right: 0;
+        top: 0;
+        float: right;
+        position: relative;
+    }
 }
