--- a/public/css/main.css
+++ b/public/css/main.css
@@ -77,6 +77,7 @@ hr {
 .small-text-box {
     border: 2px solid aliceblue;
     padding: 50px;
+    max-width: 235px;
 }
 
 .night li {
@@ -122,6 +123,14 @@ hr {
 }
 
 @media screen and (max-width: 1300px) {
+	.small-text-box {
+		max-width: 100%
+	}
+
+	#screenshot {
+		display: none;
+	}
+
     #little_callie {
         right: 0;
         top: 0;
